<resources>
    <string name="app_name">Ứng dụng bói tình yêu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="src_link">https://xemboi.com.vn/wp-admin/admin-ajax.php</string>
    <string name="male_area"><u>Bạn nam</u></string>
    <string name="female_area"><u>Bạn nữ</u></string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">Đăng nhập</string>
    <string name="prompt_email">Tài khoản</string>
    <string name="prompt_password">Mật khẩu</string>
    <string name="action_sign_up_short">Đăng ký</string>
    <string name="action_sign_in">Đăng nhập</string>
    <string name="action_sign_in_short">Đăng nhập</string>
    <string name="welcome">"Xin chào, "</string>
    <string name="invalid_username">Tài khoản không hợp lệ</string>
    <string name="invalid_password">Mật khẩu phải lớn hơn 5 kí tự</string>
    <string name="login_failed">"Đăng nhập thất bại"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>